# someofmytools

./: Spacefile  liste.json  main.py  parse.py  pyproject.toml  repl.py  repl.txt  sub.json  sub.txt  t.php
templates/: index.html  menu (copy).html  menu.html
